<resources>
    <string name="app_name">Delmon</string>
    <string name="permit_manually">Permit Manually</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_option">Choose Your Option</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="no_internet_connection">No Internet Connection.. Please Try Again..</string>
    <string name="time_out_error">TimeOut Error Please Try Again..</string>
    <string name="session_expired">Session Expired. Login to continue</string>
    <string name="server_error">Server Error.. Please Try Again..</string>
    <string name="network_error">Network Error.. Please Try Again..</string>
    <string name="parsing_error">Parse Error.. Please Try Again..</string>
    <string name="permission_failed_error">You failed to give some permission, You can enable it in settings to proceed further.</string>
    <string name="map_api_key">AIzaSyDJkkEVjbiTj-xMGkCafmoE4DmXYdRLgS0</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_order">Orders</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="title_onboarding_1">onboard1</string>
    <string name="description_onboarding_1">Onboard1desc</string>
    <string name="dummy_tittle"></string>
    <string name="dummy_desc"></string>
    <string name="skip">Skip</string>
    <string name="exit_press_back_twice_message">Press Back again to Exit</string>
    <string name="what_are_you_looking">What are your looking For ?</string>
    <string name="Select_desc"></string>
    <string name="poultry">Farm Chicken</string>
    <string name="feeding">Delmon Feed</string>
    <string name="getin">Get In</string>
    <string name="search_text">What would you like to Search</string>
    <string name="select_your_category">Select Your Category</string>
    <string name="title">Title</string>
    <string name="categories">Categories</string>
    <string name="product_list">Product List</string>
    <string name="instock">In Stock</string>
    <string name="dummy_amt">00BD</string>
    <string name="dummy_weight">000gm</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="pack_sizes">Pack Sizes</string>
    <string name="recipes">Recepies</string>
    <string name="amount">Amount</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="about_tax">About any Tax</string>
    <string name="view_cart">View Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="privacy_content"><![CDATA[By Joining , you agree to Terms of service & privacy policy]]></string>
    <string name="type_of_acc">Type of Account</string>
    <string name="normal_user">Normal User</string>
    <string name="merchants">Merchants</string>
    <string name="employess">Employees</string>
    <string name="enter_cr_num">Enter Cr Number</string>
    <string name="proceed">Proceed</string>
    <string name="phone_num">Phone Number</string>
    <string name="continuee">Continue</string>
    <string name="or">OR</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_a_verification">We have sent a verification Code to </string>
    <string name="didnt_recive_otp">Didn\’t rececive OTP </string>
    <string name="resend">RESEND</string>
    <string name="Name">Name</string>
    <string name="edit">Edit</string>
    <string name="dummy_no" />
    <string name="address">Addresses</string>
    <string name="address_desc"><![CDATA[Edit & Add new Addresses]]></string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="wallet_desc">Check your balance at a glance.</string>
    <string name="favourites">Favourites</string>
    <string name="fav_desc">The items you love the most</string>
    <string name="loyalty_point">Loyality Points</string>
    <string name="loyalty_desc">View your points earned from past purchases</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="help_desc">Need help? Contact us</string>
    <string name="settings">Settings</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_desc">Share your thoughts with us.</string>
    <string name="logout">Logout</string>
    <string name="feedback_content">We love to improve our service and products and that can be possible if you provide some feedback.</string>
    <string name="submit_feedback">SUBMIT FEEDBACK</string>
    <string name="contact_delmon">Contact delmon</string>
    <string name="help_content">Anything you need help with? We are here for you. Connect with us through any mode you prefer from below.</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="mail">Mail</string>
    <string name="notifications">Notification</string>
    <string name="language">Language</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="delete_ac">Delete Account</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select">Select</string>
    <string name="mobile_notification">Mobile Notification</string>
    <string name="tittle">Title</string>
    <string name="about_content"></string>
    <string name="email_notification">Email Notification</string>
    <string name="login_to_continue">Please log in to continue.</string>
    <string name="edit_profile">EditProfile</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="points">Points</string>
    <string name="transaction_point_history">Points Transaction History</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="add_money">ADD MONEY</string>
    <string name="transaction_history">Transaction History</string>
    <string name="wallet">Wallet</string>
    <string name="no_address_content">Add your address here, this would be useful for you to navigate between different addresses while making any orders to be delivered</string>
    <string name="add_address">Add Address</string>
    <string name="no_fav_content">Hmmm, looks like you are one of very few who has not made anything favourite yet.</string>
    <string name="add_favourites">Add Favourites</string>
    <string name="search_recipes">Search recipes</string>
    <string name="recipes_list">Recipes List</string>
    <string name="recipes_name">Recipes Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="dummy_recipie_ingredient">Oil - 3 tbsp , Chopped Onion - 2pcs , Ginger Garlic paste -2pcs , Green clli paste - 1 tbsp , Garam Masala- 1.5tbsp , chicken , salt , fresh cream - 1/2 cup</string>
    <string name="steps">Steps</string>
    <string name="total_amount">Total Amount</string>
    <string name="book">Book</string>
    <string name="cart">Cart</string>
    <string name="write_note">Write a note</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="save_as">Save As</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="coupons">Coupons</string>
    <string name="available_points">Available points</string>
    <string name="payment_method">Payment Method</string>
    <string name="bill_detail">Bill Detail</string>
    <string name="total_price">Total Price</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="vat">VAT</string>
    <string name="my_order">My Order</string>
    <string name="add_item">ADD ITEMS</string>
    <string name="order_placed">Order Placed</string>
    <string name="dummy_date">00-00-0000</string>
    <string name="your_items_deliver_at">Your Items are Deliver At</string>
    <string name="accept_conitnue_order">Accept / Continue the order</string>
    <string name="reject_cancel_order">Cancel the order</string>
    <string name="your_order_details">Your Order Detail</string>
    <string name="add_basket">ADD BASKET</string>
    <string name="title_activity_feeding" translatable="false">FeedingActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="mobileno_empty">Please ENter Mobile Number</string>
    <string name="invalid_mobile_no">Invalid Mobile Number</string>
    <string name="please_add_details">Please Add Details</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="enter_all_field">Enter All Fields</string>
    <string name="saved_address">Saved Address</string>
    <string name="profile_under_review">Your Profile is Under Review. We Will Notify you once admin has Approved Your Login</string>
    <string name="city_name">City Name</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="search">Search</string>
    <string name="select_location">Select Location</string>
    <string name="change">Change</string>
    <string name="house_no">House No</string>
    <string name="building_name">Building Name</string>
    <string name="landmark">Landmark</string>
    <string name="title_home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="no_of_picies">No of Pieces :</string>
    <string name="serves">"Serves: "</string>
    <string name="basket">Basket</string>
    <string name="our_basket">Our Basket</string>
    <string name="customised_basket">Customise Basket</string>
    <string name="our_basket_list">Our Basket List</string>
    <string name="baskets">Baskets</string>
    <string name="new_basket">New Basket</string>
    <string name="add_basket_name">Add Basket Name</string>
    <string name="enter_details">Enter Details</string>
    <string name="welcome">Welcome</string>
    <string name="pieces">Pieces</string>
    <string name="kartoon">carton</string>
    <string name="delivery_type">DeliveryType</string>
    <string name="pickup">Pickup</string>
    <string name="door_delivery">Door Delivery</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="orderlist">Order List</string>
    <string name="shop_for">Shop for chicken and bird feeding supplies online</string>
    <string name="order_confirm">Order Confirmed</string>
    <string name="delivered">Delivered</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="delivered_on">Delivered On</string>
    <string name="cancelled_on">Cancelled On</string>
    <string name="expected_delivery">Expected Delivery</string>
    <string name="delivery_on">Delivery On</string>
    <string name="add_new_basket">Add New Basket</string>
</resources>