<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_fragment"
        android:title="@string/menu_dashboard"
        android:contentDescription="@string/menu_dashboard"
        android:iconTint="@color/grey"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/order_fragment"
        android:title="@string/menu_order"
        android:iconTint="@color/grey"
        android:contentDescription="@string/menu_order"
        android:icon="@drawable/order"/>

    <item
        android:id="@+id/receipes_fragment"
        android:title="@string/menu_recipes"
        android:contentDescription="@string/menu_recipes"
        android:icon="@drawable/recipe"/>
    <item
        android:id="@+id/cart_fragment"
        android:title="@string/menu_cart"
        android:contentDescription="@string/menu_cart"
        android:icon="@drawable/trolley_cart"/>

    <item
        android:id="@+id/profile_fragment"
        android:title="@string/menu_profile"
        android:contentDescription="@string/menu_profile"
        android:icon="@drawable/user_profile"/>

</menu>