<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="5dp"
    android:elevation="7dp"
    android:background="@color/white"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cityname"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/city_name"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/saveas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle_secondary_border_radius"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/home"
            android:backgroundTintMode="multiply"
            android:backgroundTint="@color/white"
            android:textColor="@color/secondary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            style="@style/regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="5dp"
            android:text="@string/add_address"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toStartOf="@+id/saveas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityname" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#10e0e0e0"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/saveas" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/edit"
            android:textSize="12dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:textAllCaps="false"
            style="@style/medium"
            android:textColor="@color/secondary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/delete"
            android:textSize="12dp"
            android:id="@+id/delete"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:textAllCaps="false"
            android:textColor="@color/secondary_color"
            app:layout_constraintStart_toEndOf="@+id/edit"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>