<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HelpSupportFragment">
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:src="@drawable/white_back_arrow" />

        <TextView
            android:id="@+id/page_title"
            style="@style/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/help_support"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:src="@drawable/icon_ionic_ios_notifications_outline"
            android:visibility="gone" />


    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        style="@style/semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/contact_delmon"
        android:id="@+id/contact_lable"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <TextView
        android:id="@+id/textView15"
        style="@style/regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/help_content"
        android:textColor="@color/text_grey"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_lable" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/call"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:backgroundTint="@color/secondary_color"
        android:drawableStart="@drawable/icon_feather_phone_call"
        android:drawablePadding="10dp"
        style="@style/regular"
        android:textSize="12dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/call"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/chat"
        style="@style/regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:drawableStart="@drawable/icon_ionic_logo_whatsapp"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/chat"
        android:textColor="@color/secondary_color"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/call"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mail"
        style="@style/regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_border"
        android:drawableStart="@drawable/icon_ionic_md_mail"
        android:drawablePadding="10dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/mail"
        android:textColor="@color/secondary_color"
        android:textSize="12dp"
        app:layout_constraintStart_toEndOf="@+id/chat"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />


</androidx.constraintlayout.widget.ConstraintLayout>